# Sap_Project

./: .gitignore  ARCHITECTURE.md  PROJECT_REPORT.html  PROJECT_REPORT.md  README.md  app.py
batch_ingestion_pipeline/: .gitignore  DEMO.md  README.md  app.py  pyproject.toml  run_demo.ps1
batch_ingestion_pipeline/data/raw/: orders_feb.csv  orders_jan.csv
batch_ingestion_pipeline/src/batch_ingestion_pipeline/: __init__.py  cli.py  config.py  database.py  pipeline.py  transform.py
batch_ingestion_pipeline/src/batch_ingestion_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
batch_ingestion_pipeline/tests/: test_pipeline.py  test_transform.py
docs/: index.md
