[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-ingestion-pipeline"
version = "0.1.0"
description = "CSV to database batch ingestion pipeline with validation, transformation, and audit logging"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1.0",
  "streamlit>=1.36.0",
  "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
batch-ingest = "batch_ingestion_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
